회원가입하기, 비밀번호 찾기 css

--- a/kokkiry/src/main/webapp/html/eunbee/FindPassword/FindPassword.html
+++ b/kokkiry/src/main/webapp/html/eunbee/FindPassword/FindPassword.html
@@ -95,7 +95,7 @@
 	<img src="./logo.jpg" height="40%"></img>
     <input type="text" name="id" placeholder="  이름"/><br/>
     <input type="text" name="email" placeholder="  이메일 "/><br/>
-    <button>비밀번호 찾기</button>
+    <button id="findpasswoard">비밀번호 찾기</button>
 </div>
 
 
@@ -105,7 +105,16 @@
 
 
 
-
+<script>
+$("#findpasswoard").click(function () {
+	html = $(".findpass").html();
+	html = "<img src='./logo.jpg' height='40%'></img>"
+	html += "<input type='text' name='id' placeholder='  새비밀번호'/><br/>"
+	html += "<input type='text' name='email' placeholder='  새 비밀번호 확인'/><br/>"
+	html += "<button>새 비밀번호 설정</button>"
+	$(".findpass").html(html);
+});
+</script>
 
 
 </body>
