--- a/kokkiry/src/main/webapp/html/eunbee/SingUp/singUp.html
+++ b/kokkiry/src/main/webapp/html/eunbee/SingUp/singUp.html
@@ -58,10 +58,10 @@
 		position: relative;
 		padding: 0px;
 		width: 400px;
-		height: 500px;
+		height: 600px;
 
 	}
-	.singup input{
+	.singup .input{
     	margin: auto;
 		border: 1px solid balck;
 		border-radius: 4px;
@@ -93,16 +93,47 @@
 		position: relative;
 		top: 20px;	
 	}
+	.singup #box2{
+    	margin: auto;
+		margin: 10px;
+		position: relative;
+		top: 40px;
+		left: 33px;
+		border: 1px solid balck;
+		border-radius: 4px;
+		font-size: 15px;
+	}
+	
 </style>
 </head>
 <body>
 <!-- Modal HTML embedded directly into document -->
   <div  id="ex1" class="singup modal">
+ 	<div id="box1">
 	<img src="./logo.jpg" width="40%"></img>
-    <input type="text" name="id" placeholder="  이름"/><br/>
-    <input type="text" name="email" placeholder="  이메일 "/><br/>
-    <input type="password" name="pass" placeholder="  비밀번호"/><br/>
-    <input type="password" name="pass2" placeholder="  비밀번호 확인"/><br/>
+    <input class="input" type="text" name="id" placeholder="  이름"/><br/>
+    <input class="input" type="text" name="email" placeholder="  이메일 "/><br/>
+    <input class="input" type="password" name="pass" placeholder="  비밀번호"/><br/>
+    <input class="input" type="password" name="pass2" placeholder="  비밀번호 확인"/><br/>
+    </div>
+    
+    <div id="box2">
+        성별  
+    <input type="radio" name="gender" value="M">남성</input>
+    <input type="radio" name="gender" value="F">여성</input><br>
+    </div>
+     <div id="box2">
+         생년월일  
+    <input type="text" name="phone" size=4 maxlength=4 style="height: 20px;"/>년
+    <input type="text" name="phone" size=2 maxlength=2 style="height: 20px;"/>월
+    <input type="text" name="phone" size=2 maxlength=2 style="height: 20px;"/>일<br>
+     </div>
+    <div id="box2">
+        연락처  
+    <input type="text" name="phone" size=3 maxlength=3 style=" height: 20px;  /> -
+    <input type="text" name="phone" size=4 maxlength=4 style=" height: 20px;  /> -
+    <input type="text" name="phone" size=4 maxlength=4 style=" height: 20px;  /><br>
+    </div>
     <button>회원가입</button>
 </div>
 
