--- a/kokkiry/src/main/webapp/html/eunbee/SingUp/singUp.html
+++ b/kokkiry/src/main/webapp/html/eunbee/SingUp/singUp.html
@@ -130,9 +130,9 @@
      </div>
     <div id="box2">
         연락처  
-    <input type="text" name="phone" size=3 maxlength=3 style=" height: 20px;  /> -
-    <input type="text" name="phone" size=4 maxlength=4 style=" height: 20px;  /> -
-    <input type="text" name="phone" size=4 maxlength=4 style=" height: 20px;  /><br>
+    <input type="text" name="phone" size=3 maxlength=3 style=" height: 20px;"  /> -
+    <input type="text" name="phone" size=4 maxlength=4 style=" height: 20px;"  /> -
+    <input type="text" name="phone" size=4 maxlength=4 style=" height: 20px;"  /><br>
     </div>
     <button>회원가입</button>
 </div>
